# flowboard

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-api/: Dockerfile  main.py  pyproject.toml  requirements.txt
ai-api/app/: celery_app.py  config.py  llm.py  main.py  tasks.py
ai-api/app/clients/: backend_client.py  groq.py  local_llm.py  weaviate_client.py  weaviate_schema.py
ai-api/app/enums/: chunk_type.py
ai-api/app/grammars/: collection_workspace.py  workflow.py
ai-api/app/models/request/: collection_workspace_request.py  list_chunk_request.py  patterns_extract_request.py  retrieval_collection_request.py  retrieval_request.py  retrieval_workflow_request.py  search_strategist_request.py  tagging_request.py  workflow_workspace_request.py  workspace_request.py
ai-api/app/models/response/: patterns_extract_reponse.py  retrieval_collection_response.py  (+4 more)
ai-api/app/observability/: phoenix.py
ai-api/app/routes/: chunk.py  retrieval.py  search_strategist.py  tagging.py  workspace.py
ai-api/app/schemas/: chunk.py  data_question.py  workspace.py
ai-api/app/services/: chunk_service.py  generate_workflow_service.py  pattern_extraction_service.py  retrieval_service.py  scoring_service.py  tagging_service.py  workspace_chunk_service.py  workspace_selection_service.py
ai-api/app/tasks/: __init__.py  chunk_tasks.py  generate_collection_workspace_task.py  generate_workflow_task.py  generate_workflow_workspace_task.py  rank_and_generate_task.py  search_strategist_task.py
ai-api/app/tests/: test_chunk_tasks.py  test_rank_and_generate_task.py
(+280 files in other folders)
