[project]
name = "flowboard-ai"
version = "0.1.0"
description = "AI services for Flowboard"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "llama-cpp-python",
    "celery",
    "redis",
    "requests",
    "arize-phoenix",
    "weaviate-client",
    "sentence-transformers",
    "pydantic-settings",
    "groq"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]